package org.example.repositories;

public record Office(
        int id,
        String Date_delivery,
        String Action,
        String note
) {
}
