package org.example.repositories;

public record Outside(
        int id,
        String Date_delivery,
        String Date_take,
        String Action,
        String note
) {
}
