package org.example.repositories;

public record Store(
        int id,
        String Action,
        String note
) {
}
