package org.example.repositories;

public record item(
        int id,
        String name,
        String ser_numb,
        String inv_numb
)
{
}
